fix small screen alignements, issue with promo section card design when smallscreen

--- a/src/routes/home.css
+++ b/src/routes/home.css
@@ -16,7 +16,7 @@
 
 }
 
-.vsplit-txt div {
+.whitebox {
     background-color: rgba(255, 255, 255, 0.438);
     height: 100%;
     width: 100%;
@@ -147,7 +147,8 @@
 }
 
 .three-sq {
-    height: 100px;
+    max-height: 100px;
+    height: 7vw;
 }
 
 .promo-c-text {
@@ -169,4 +170,32 @@
 .break {
     flex-basis: 100%;
     height: 0;
+}
+
+/* small */
+@media (max-width: 750px) {
+    .vsplit-txt {
+        display: none;
+    }
+
+    .whitebox {
+        padding: 20px 30px;
+    }
+}
+
+@media (max-width: 575px) {
+
+    #bold-ad-div {
+        padding: 5vw 20px;
+    }
+
+    .services-container {
+        padding: 50px 20px;
+    }
+}
+
+@media (min-width: 750px) {
+    .large-hide {
+        display: none;
+    }
 }
